--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,6 +40,7 @@ body {
     --sidebar-accent-foreground: 240 20% 98%;
     --sidebar-border: 252 82% 50%;
     --sidebar-ring: 340 82% 95%;
+    --radius: 0.75rem;
   }
   .dark {
     --background: 252 20% 12%;
@@ -74,6 +75,7 @@ body {
     --sidebar-accent-foreground: 240 20% 88%;
     --sidebar-border: 252 20% 25%;
     --sidebar-ring: 252 82% 69%;
+    --radius: 0.75rem;
   }
 }
 
